# CryoQuant

./: .gitignore  AGENTS.md  README.md  pyproject.toml
analyses/hedged_btc/: APPROACH.md  CRYOBACKTESTER_STRATEGY_SPECS.md  FINDINGS.md  RESULTS.md  __init__.py  _utils.py  book.py  carry_history.py  cash_book.py  drawdown_anatomy.py  fees.py  live_quote.py  nav_sim.py  nav_sim_c7.py  pricing.py  report.py  roll_rules.py  run_c7_sim.py  run_first_sim.py  run_phase1.py  skew_history.py  vrp_history.py
cryocore/: __init__.py  calendars.py  instruments.py  schemas.py  time.py
cryoquant/: __init__.py  config.py
cryoquant/backtest/: __init__.py  cryobt_bridge.py  option_lookup.py  reports.py  robustness.py  spot_pnl.py
cryoquant/cli/: __init__.py
cryoquant/data/: catalog.py  loader.py
cryoquant/features/: builders.py  calendar_features.py  labels.py  options.py  primitives.py  store.py
cryoquant/models/: __init__.py  base.py  baselines.py  cv.py  metrics.py  registry.py  tabular.py
cryoquant/signals/: __init__.py  base.py  ema_cross.py  from_model.py  thresholds.py
docs/: decisions.md  glossary.md  how_to_add_a_signal.md  how_to_use.md  quant_plan.md  quant_spec.md
notebooks/: ema_cross_exploration.ipynb  ema_cross_options_backtest.ipynb
reference/: README.md  cryobacktester_notes.md
scripts/: e2e_live.py  ema_cross_backtest.py  ema_cross_options_backtest.py
tests/: conftest.py  test_ema_cross.py  test_hedged_btc_phase2.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_smoke.py
(+130 files in other folders)
