[project]
name = "cryoquant"
version = "0.0.1"
description = "Asset-agnostic quant pipeline: data → features → models → calibrated signals → backtest."
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15",
    "duckdb>=1.0",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "requests>=2.31",
    "scipy>=1.13",
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "optuna>=3.6",
    "shap>=0.45",
    "joblib>=1.4",
    "pandas-market-calendars>=4.4",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "ipykernel>=6.29",
    "matplotlib>=3.8",
]
dashboard = [
    "panel>=1.4",
    "bokeh>=3.4",
    "plotly>=5.20",
]
macro = [
    "fredapi>=0.5",
    "pandas-datareader>=0.10",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cryocore*", "cryoquant*"]
exclude = ["reference*", "tests*", "notebooks*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers -m 'not live and not slow'"
markers = [
    "live: requires network access or external data (opt-in)",
    "slow: takes > 5 seconds (opt-in)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
